--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST=127.0.0.1
 PORT=3001
 
-POSTGRE_DB_NAME=
-POSTGRE_DB_USERNAME=
-POSTGRE_DB_PASSWORD=
+MYSQL_DB_NAME=
+MYSQL_DB_USERNAME=
+MYSQL_DB_PASSWORD=
