--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ PORT=3000
 
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_DB_NAME=be-project-db
+MYSQL_DB_NAME=notes_app
 MYSQL_DB_USERNAME=root
 MYSQL_DB_PASSWORD=
