--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 HOST=127.0.0.1
 PORT=3013
 
-MYSQL_HOST=sql12.freemysqlhosting.net
+MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_DB_NAME=sql12592703
-MYSQL_DB_USERNAME=sql12592703
-MYSQL_DB_PASSWORD=Y1P7isx7F6
+MYSQL_DB_NAME=notes_app
+MYSQL_DB_USERNAME=root
+MYSQL_DB_PASSWORD=
 
 JWT_KEY=ssttt
